<resources>
    <string name="app_name">KbtuIntranet</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="courses">Courses</string>
    <string name="profile">Profile</string>
    <string name="error_weak_password">Invalid password</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_user_exists">There is no user</string>
    <string name="transcript">Transcript</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="mycourses">My Courses</string>

    <string-array name="spinner_list_array">
        <item>All</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="fall">Fall</string>
    <string name="number_of_credits">Number of credits</string>
    <string name="short_description">Short description</string>
    <string name="surname">Surname</string>
    <string name="year">Year</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="haven_t_got_an_account">Haven\'t got an account?</string>
    <string name="zero">0</string>
    <string name="register">Register</string>
    <string name="name_surname">Name Surname</string>
</resources>
