<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".item.details.StudentDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mainForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical"/>
        <LinearLayout
            android:background="@drawable/gradient_back"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePhoto"
                android:onClick="onLoadPhoto"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/person_profile"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimaryDark"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="21sp"/>
                <TextView
                    android:id="@+id/tvSurname"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surname"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:textSize="21sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/year"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="21sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="5dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryLight" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>