<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="8dp"
        android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etUsernameWrapper"
                android:layout_width="match_parent"
                android:background="@drawable/container"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorTextLight">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:hint="@string/username"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:background="@drawable/edit_text_back"
                    android:textColor="@color/colorPrimaryLight"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/container"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColorHint="@color/colorTextLight">
                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:background="@drawable/edit_text_back"
                        android:textColor="@color/colorPrimaryLight"
                        android:inputType="textPassword"
                        android:hint="@string/password" />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/bnSeePassword"
                    android:onClick="onSeePassword"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="36dp"
                    android:layout_alignEnd="@id/etPasswordWrapper"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/eye"/>

                </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColorHint="@color/colorTextLight">
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:background="@drawable/edit_text_back"
                android:textColor="@color/colorPrimaryLight"
                android:inputType="text"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etSurnameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColorHint="@color/colorTextLight">
            <EditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:background="@drawable/edit_text_back"
                android:textColor="@color/colorPrimaryLight"
                android:inputType="text"
                android:hint="@string/surname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bnRegister"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

</RelativeLayout>